repair styling rooms desktop p alignment

--- a/resources/feature.css
+++ b/resources/feature.css
@@ -194,7 +194,7 @@
 	/* FEATURE */
 	#feature-section {
 		font-size: 1.25rem;
-		text-align: left;
+		text-align: center;
 		padding-bottom: 60px;
 	}
 	#feature-section h1 {
@@ -260,7 +260,6 @@
 	.sub-feature-info-holder ul {
 		text-align: left;
 		margin: 5px 0 0 0;
-		padding-right: 25px;
 		width: 75%;
 	}
 	.sub-feature li {
